--- a/7-Hands-on Practice from Past Lessons/views/index.ejs
+++ b/7-Hands-on Practice from Past Lessons/views/index.ejs
@@ -19,10 +19,10 @@
         <div class="tasks flex gap-5 flex-wrap p-10">
 
             <% if(files.length > 0) { %>
-                 <% files.forEach(function(val){ %>
+                 <% files.forEach(function(value){ %>
                     <div class="task min-w-72 px-3 py-4 rounded-md bg-zinc-800">
-                        <h1 class="text-white text-3xl tracking-tighter"><%= val %></h1>
-                        <a class="text-blue-500 inline-block mt-3" href="/files/<%= val %>">Read More.</a>
+                        <h1 class="text-white text-3xl tracking-tighter"><%= value %></h1>
+                        <a class="text-blue-500 inline-block mt-3" href="/file/<%= value %>">Read More.</a>
                     </div>
                 <% }) %>
           <% } else { %>
