--- a/7-Hands-on Practice from Past Lessons/views/show.ejs
+++ b/7-Hands-on Practice from Past Lessons/views/show.ejs
@@ -10,7 +10,7 @@
     <div class="main w-full min-h-screen bg-zinc-900 p-10 text-white">
         <a class="text-blue-500 inline-block mb-10" href="/">Go Back to Home</a>
         <h1 class="text-4xl tracking-tighter"><%= filename %></h1>
-        <p class="taxt-xl mt-5 font-light"><%= filename %></p>
+        <p class="taxt-xl mt-5 font-light"><%= filedata %></p>
     </div>
 </body>
 </html>
