--- a/7-Hands-on Practice from Past Lessons/views/index.ejs
+++ b/7-Hands-on Practice from Past Lessons/views/index.ejs
@@ -22,7 +22,10 @@
                  <% files.forEach(function(value){ %>
                     <div class="task min-w-72 px-3 py-4 rounded-md bg-zinc-800">
                         <h1 class="text-white text-3xl tracking-tighter"><%= value %></h1>
-                        <a class="text-blue-500 inline-block mt-3" href="/file/<%= value %>">Read More.</a>
+                            <div class="flex w-full justify-between items-center mt-3">
+                            <a class="text-blue-500 inline-block" href="/file/<%= value %>">Read More.</a>
+                            <a class="text-green-500" href="/edit/<%= value %>">Edit Filename</a>
+                        </div>
                     </div>
                 <% }) %>
           <% } else { %>
