--- a/17-Mini Project 1 Part-1 Data Association/views/profile.ejs
+++ b/17-Mini Project 1 Part-1 Data Association/views/profile.ejs
@@ -24,9 +24,10 @@
                     <div class="post w-1/3 p-4 mb-4 rounded-md bg-zinc-800 border-[1px] border-zinc-700">
                     <h4 class="text-blue-500 mb-2">@<%= user.username %></h4>
                     <p class="text-sm tracking-tight"><%= post.content %></p>
-                    <div class="btns flex mt-5 gap-4">
-                        <a class="text-blue-500" href="">Like</a>
-                        <a class="text-zinc-600" href="">Edit</a>
+                    <small class="mt-2 inline-block"><%= post.likes.length %></small>
+                    <div class="btns flex mt-1 gap-4">
+                        <a class="text-blue-500" href="/like/<%= post._id %>"><%= post.likes.indexOf(user._id) === -1 ? "Like" : "Unlike" %></a>
+                        <a class="text-zinc-600" href="/edit/<%= post._id %>">Edit</a>
                     </div>
                 </div>
                <% }) %>
