--- a/17-Mini Project 1 Part-1 Data Association/views/profile.ejs
+++ b/17-Mini Project 1 Part-1 Data Association/views/profile.ejs
@@ -11,8 +11,13 @@
         <div class="w-full flex justify-end">
             <a class="bg-red-500 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/logout">Logout</a>
         </div>
+        <div class="flex items-start gap-3">
+        <div class="w-10 h-10 rounded-md overflow-hidden">
+            <img class="w-full h-full object-cover" src="/images/uploads/<%= user.profilepic %>" alt="">
+        </div>
         <h3 class="text-3xl"> <span class="font-light">Hello</span>, <%= user.name %> 👋 </h3>
-        <h5 class="mb-5">You can create a new post.</h5>
+        </div>
+        <h5 class="mb-5 mt-3">You can create a new post.</h5>
         <form action="/post" method="post">
             <textarea placeholder="What's on your mind ?" class="block p-3 outline-none w-1/3 resize-none bg-transparent border-2 border-zinc-800 rounded-md" name="content"></textarea>
             <input class="px-3 py-2 w-40 text-sm bg-blue-500 block rounded-md mt-2" type="submit" value="Create New Post">
