--- a/17-Mini Project 1 Part-1 Data Association/views/profileupload.ejs
+++ b/17-Mini Project 1 Part-1 Data Association/views/profileupload.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="w-full h-screen bg-slate-900 text-white p-10">
-        <h3 class="text-3xl mb-5">Upload File</h3>
+        <h3 class="text-3xl mb-5">Upload Profile Picture</h3>
         <form autocomplete="off" action="/upload" method="post" enctype="multipart/form-data">
             <input type="file" name="image">
             <input class="px-5 py-2 bg-blue-500 rounded-md" type="submit" placeholder="" value="Upload File">
